# hangman-with-tdd

./: .flake8  .gitignore  .pylintrc  LICENSE  README.md  main.py  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml
data/: phrases.txt  words.txt
project-report/: Project Report - Amrit Niure Danala Campus.docx  ~$oject Report - Amrit Niure Danala Campus.docx  ~WRL1077.tmp
src/: __init__.py  game.py  providers.py  ui_cli.py
tests/: test_game.py
